--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,11 +28,11 @@ camel.component.kafka.configuration.allow-manual-commit=true
 camel.component.kafka.configuration.topic-is-pattern=true
 
 # Custom configuration
-mc.broker.hostname=esbtest01
-mc.broker.port=2200
-mc.broker.queuemanager=PP.MAIN01.QM
-mc.broker.channel=SASESP.SVRCONN
-mc.broker.transporttype=1
+mq.broker.hostname=esbtest01
+mq.broker.port=2200
+mq.broker.queuemanager=PP.MAIN01.QM
+mq.broker.channel=SASESP.SVRCONN
+mq.broker.transporttype=1
 
 mc.esp.uri=esp://sasespt.bankexp.local:5667?project=SRC_MC&contquery=cqFromMC&window=srcFromMC
 vb.esp.uri=esp://sasespt.bankexp.local:5667?project=AGGR_VB&contquery=cqFromVB&window=srcFromVB
