first version kafka(esp) to arm

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,17 +21,17 @@ camel.rest.component=undertow
 camel.rest.port=6666
 
 # Kafka configuration
-camel.component.kafka.configuration.brokers=sasespt.bankexp.local:9092
+camel.component.kafka.configuration.brokers=localhost:9092
 camel.component.kafka.configuration.auto-commit-on-stop=async
 camel.component.kafka.configuration.auto-commit-interval-ms=2000
 camel.component.kafka.configuration.allow-manual-commit=true
 camel.component.kafka.configuration.topic-is-pattern=true
 
 # Custom configuration
-mq.broker.hostname=esbtest01
-mq.broker.port=2200
-mq.broker.queuemanager=PP.MAIN01.QM
-mq.broker.channel=SASESP.SVRCONN
+mq.broker.hostname=127.0.0.1
+mq.broker.port=1414
+mq.broker.queuemanager=QM1
+mq.broker.channel=DEV.APP.SVRCONN
 mq.broker.transporttype=1
 
 mc.esp.uri=esp://sasespt.bankexp.local:5667?project=SRC_MC&contquery=cqFromMC&window=srcFromMC
