--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,39 +1,48 @@
 # Logging
 debug=false
-logging.level.org.apache.camel=INFO
-logging.level.org.apache.kafka=INFO
-logging.level.com.pochtabank.af=DEBUG
+logging.=
+logging.file=/opt/sas/env/var/log/camel_connector.log
+logging.level.root=INFO
+logging.register-shutdown-hook=true
 
 # Main configuration
-spring.profiles.active=default
+spring.application.name=SAS ESP Connector application
 camel.springboot.main-run-controller=true
 camel.springboot.xml-routes=classpath:camel/routes/*.xml
-camel.springboot.xml-rests=classpath:camel/rests/*.xml
-camel.springboot.xml-routes-reload-directory=/home/sas/esp/routes
 
-# JMX
-spring.jmx.enabled=false
-camel.springboot.jmx-enabled=false
-
-# REST configuration
 server.port=10000
+management.server.port=10000
 camel.rest.component=undertow
 camel.rest.port=6666
 
+spring.boot.admin.client.url=http://localhost:10000
+management.endpoints.web.exposure.include=*
+management.endpoint.shutdown.enabled=true
+
 # Kafka configuration
-camel.component.kafka.configuration.brokers=sasespt.bankexp.local:9092
+camel.component.kafka.configuration.brokers=localhost:9092
 camel.component.kafka.configuration.auto-commit-on-stop=async
 camel.component.kafka.configuration.auto-commit-interval-ms=2000
 camel.component.kafka.configuration.allow-manual-commit=true
 camel.component.kafka.configuration.topic-is-pattern=true
 
+
 # Custom configuration
+
 mq.broker.hostname=esbtest01
 mq.broker.port=2200
 mq.broker.queuemanager=PP.MAIN01.QM
 mq.broker.channel=SASESP.SVRCONN
 mq.broker.transporttype=1
 
-mc.esp.uri=esp://sasespt.bankexp.local:5667?project=SRC_MC&contquery=cqFromMC&window=srcFromMC
-vb.esp.uri=esp://sasespt.bankexp.local:5667?project=AGGR_VB&contquery=cqFromVB&window=srcFromVB
-arm.esp.uri=esp://sasespt.bankexp.local:5667?project=AGGR_ARM&contquery=cqFromARM&window=srcFromARM
+mc.mq-queue-name.in=ESB.SYS.MK.SASESP.IN.RQ
+mc.mq-queue-name.out=ESB.SYS.MK.SASESP.IN.RS
+arm.mq-queue-name.in=ESB.ARMAF.OUT.RS
+arm.mq-queue-name.out=ESB.ADP.ARMAF.OUT.RQ
+
+
+# Folders configuration
+mc.test.folder.in=/opt/sas/env/test/multikarta/in
+arm.test.folder.in=/opt/sas/env/test/arm/in
+
+monitor.folder=/opt/sas/env/data/kafka
