fix name for arm mq in

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -37,12 +37,16 @@ mq.broker.transporttype=1
 
 mc.mq-queue-name.in=ESB.SYS.MK.SASESP.IN.RQ
 mc.mq-queue-name.out=ESB.SYS.MK.SASESP.IN.RS
-arm.mq-queue-name.in=ESB.ARMAF.OUT.RS
-arm.mq-queue-name.out=ESB.ADP.ARMAF.OUT.RQ
+
+# messages from arm (IBM MQ) to esp (Kafka)
+arm.mq-queue-name.in=ESB.SASESP.OUT.RS
+# messages from esp (Kafka) to arm (IBM MQ)
+arm.mq-queue-name.out=ESB.ADP.SASESP.OUT.RQ
 
 
 # Folders configuration
 mc.test.folder.in=/opt/sas/env/test/multikarta/in
+# messages from arm (folder) to arm(IBM MQ)
 arm.test.folder.in=/opt/sas/env/test/arm/in
 
 monitor.folder=/opt/sas/env/data/kafka
