--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
+
 # Logging
 debug=false
-logging.=
-logging.file=/opt/sas/env/var/log/camel_connector.log
+logging.path=/opt/sas/env/var/log/
 logging.level.root=INFO
 logging.register-shutdown-hook=true
 
@@ -9,6 +9,7 @@ logging.register-shutdown-hook=true
 spring.application.name=SAS ESP Connector application
 camel.springboot.main-run-controller=true
 camel.springboot.xml-routes=classpath:camel/routes/*.xml
+camel.springboot.xml-routes-reload-directory=
 
 server.port=10000
 management.server.port=10000
@@ -21,7 +22,6 @@ management.endpoint.shutdown.enabled=true
 
 # Kafka configuration
 camel.component.kafka.configuration.brokers=localhost:9092
-camel.component.kafka.configuration.auto-commit-on-stop=async
 camel.component.kafka.configuration.auto-commit-interval-ms=2000
 camel.component.kafka.configuration.allow-manual-commit=true
 camel.component.kafka.configuration.topic-is-pattern=true
@@ -37,8 +37,8 @@ mq.broker.transporttype=1
 
 mc.mq-queue-name.in=ESB.SYS.MK.SASESP.IN.RQ
 mc.mq-queue-name.out=ESB.SYS.MK.SASESP.IN.RS
-arm.mq-queue-name.in=ESB.ARMAF.OUT.RS
-arm.mq-queue-name.out=ESB.ADP.ARMAF.OUT.RQ
+arm.mq-queue-name.in=ESB.SASESP.OUT.RS
+arm.mq-queue-name.out=ESB.ADP.SASESP.OUT.RQ
 
 
 # Folders configuration
