--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -1,28 +1,11 @@
 
-spring.application.name=SAS ESP Connector application
-spring.profiles.active=local
-
-# Main configuration
-server.port=10000
-management.server.port=10000
-management.endpoints.web.exposure.include=*
-management.endpoint.shutdown.enabled=true
-
 # Logging
-debug=false
 logging.file=camel-connector.log
 logging.level.root=INFO
-logging.register-shutdown-hook=true
 
 # Camel configuration
-camel.rest.port=6666
-camel.springboot.main-run-controller=true
-camel.springboot.xml-routes=classpath:camel/routes/*.xml
 camel.springboot.xml-routes-reload-directory=/opt/sas/env/routes
 camel.component.kafka.configuration.brokers=localhost:9092
-camel.component.kafka.configuration.auto-commit-interval-ms=1000
-camel.component.kafka.configuration.allow-manual-commit=true
-camel.component.kafka.configuration.topic-is-pattern=true
 
 # IBM MQ configuration
 ibm.mq.conn-name=esbtest01(2200)
@@ -43,4 +26,4 @@ mc.test.folder.in=/opt/sas/env/test/multikarta/in
 mc.test.folder.out=/opt/sas/env/test/multikarta/out
 arm.test.folder.in=/opt/sas/env/test/arm/in
 arm.test.folder.out=/opt/sas/env/test/arm/out
-monitor.folder=/opt/sas/env/data/kafka
+monitor.folder=/tmp
