--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,5 @@
-
 spring.application.name=SAS ESP Connector application
-spring.profiles.active=local
+spring.profiles.active=dev
 
 # Main configuration
 server.port=10000
