request from esp to arm

--- a/src/main/resources/application-andrey.properties
+++ b/src/main/resources/application-andrey.properties
@@ -1,46 +1,8 @@
+# configuration for andrey local machine
 
-# Main configuration
-server.port=10000
-management.server.port=10000
-management.endpoints.web.exposure.include=*
-management.endpoint.shutdown.enabled=true
-
-# Logging
-debug=false
-logging.file=camel-connector.log
-logging.level.root=INFO
-logging.register-shutdown-hook=true
-
-# Camel configuration
-camel.rest.port=6666
-camel.springboot.main-run-controller=true
-camel.springboot.xml-routes=classpath:camel/routes/*.xml
-camel.springboot.xml-routes-reload-directory=/opt/sas/env/routes
-
-# Kafka conf
-camel.component.kafka.configuration.brokers=localhost:9092
-camel.component.kafka.configuration.auto-commit-interval-ms=1000
-camel.component.kafka.configuration.allow-manual-commit=true
-camel.component.kafka.configuration.topic-is-pattern=true
-
-# IBM MQ configuration
+# IBM MQ configuration for andrey local machine
 ibm.mq.conn-name=127.0.0.1(1414)
 ibm.mq.queue-manager=QM1
 ibm.mq.channel=DEV.APP.SVRCONN
 ibm.mq.user=admin
 ibm.mq.password=passw0rd
-
-
-# Custom configuration
-mc.mq-queue-name.in=ESB.SYS.MK.SASESP.IN.RQ
-mc.mq-queue-name.out=ESB.SYS.MK.SASESP.IN.RS
-
-arm.mq-queue-name.in=ESB.SASESP.OUT.RS
-arm.mq-queue-name.out=ESB.ADP.SASESP.OUT.RQ
-
-# Folders configuration
-mc.test.folder.in=/opt/sas/env/test/multikarta/in
-mc.test.folder.out=/opt/sas/env/test/multikarta/out
-arm.test.folder.in=/opt/sas/env/test/arm/in
-arm.test.folder.out=/opt/sas/env/test/arm/out
-monitor.folder=/opt/sas/env/data/kafka
