--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,7 +1,4 @@
-
-# Main configuration
-server.port=10000
-management.server.port=10000
+# configuration for dev stend
 
 # Logging
 logging.file=/opt/sas/env/var/log/camel-connector.log
@@ -9,22 +6,3 @@ logging.file=/opt/sas/env/var/log/camel-connector.log
 # Camel configuration
 camel.component.kafka.configuration.brokers=sasespt.bankexp.local:9092
 
-# IBM MQ configuration
-ibm.mq.conn-name=esbtest01(2200)
-ibm.mq.queue-manager=PP.MAIN01.QM
-ibm.mq.channel=SASESP.SVRCONN
-
-
-# Custom configuration
-mc.mq-queue-name.in=ESB.SYS.MK.SASESP.IN.RQ
-mc.mq-queue-name.out=ESB.SYS.MK.SASESP.IN.RS
-
-arm.mq-queue-name.in=ESB.SASESP.OUT.RS
-arm.mq-queue-name.out=ESB.ADP.SASESP.OUT.RQ
-
-# Folders configuration
-mc.test.folder.in=/opt/sas/env/test/multikarta/in
-mc.test.folder.out=/opt/sas/env/test/multikarta/out
-arm.test.folder.in=/opt/sas/env/test/arm/in
-arm.test.folder.out=/opt/sas/env/test/arm/out
-monitor.folder=/opt/sas/env/data/kafka
