--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,6 @@
+# Main configuration
 spring.application.name=SAS ESP Connector application
 spring.profiles.active=andrey
-
-# Main configuration
 server.port=10000
 management.server.port=10000
 management.endpoints.web.exposure.include=*
@@ -30,16 +29,33 @@ ibm.mq.conn-name=esbtest01(2200)
 ibm.mq.queue-manager=PP.MAIN01.QM
 ibm.mq.channel=SASESP.SVRCONN
 
-# Custom configuration
+########################
+# Custom configuration #
+########################
+
+# MC JMS
 mc.mq-queue-name.in=ESB.SYS.MK.SASESP.IN.RQ
 mc.mq-queue-name.out=ESB.SYS.MK.SASESP.IN.RS
 
+# ARM JMS
 arm.mq-queue-name.in=ESB.SASESP.OUT.RS
 arm.mq-queue-name.out=ESB.ADP.SASESP.OUT.RQ
 
-# Folders configuration
+# ARM Kafka
+kafka.internal.esp.to.arm=esp.internal.esp.to.arm
+kafka.internal.arm.to.esp=esp.internal.arm.to.esp
+kafka.integration.esp.to.arm=esp.integration.esp.to.arm
+kafka.integration.arm.to.esp=esp.integration.arm.to.esp
+
+# Folders configuration for test
+
+# MC FOLDER
 mc.test.folder.in=/opt/sas/env/test/multikarta/in
 mc.test.folder.out=/opt/sas/env/test/multikarta/out
+
+# ARM FOLDER
 arm.test.folder.in=/opt/sas/env/test/arm/in
 arm.test.folder.out=/opt/sas/env/test/arm/out
+
 monitor.folder=/opt/sas/env/data/kafka
+
