1. Fixed bug in response generation 2. User/pass for JMX remote connection

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,8 @@ server.port=10000
 management.server.port=10000
 management.endpoints.web.exposure.include=*
 management.endpoint.shutdown.enabled=true
+spring.security.user.name=admin
+spring.security.user.password=admin
 
 # Logging
 debug=false
